Small updates to code

--- a/ps2/PS2.ipynb
+++ b/ps2/PS2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import yfinance as yf\n",
-    "from datetime import datetime\n"
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +143,8 @@
        "      <td>2024-02-08 20:33:22+00:00</td>\n",
        "      <td>165.0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>7.70</td>\n",
-       "      <td>7.85</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>482.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -153,8 +153,8 @@
        "      <td>2024-02-08 20:54:58+00:00</td>\n",
        "      <td>170.0</td>\n",
        "      <td>4.7</td>\n",
-       "      <td>4.65</td>\n",
-       "      <td>4.80</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>247.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -167,8 +167,8 @@
        "1  AMZN240308C00170000 2024-02-08 20:54:58+00:00   170.0             4.7   \n",
        "\n",
        "   call_bid  call_ask  call_volume  \n",
-       "0      7.70      7.85        482.0  \n",
-       "1      4.65      4.80        247.0  "
+       "0       0.0       0.0        482.0  \n",
+       "1       0.0       0.0        247.0  "
       ]
      },
      "metadata": {},
@@ -218,8 +218,8 @@
        "      <td>2024-02-08 20:55:40+00:00</td>\n",
        "      <td>165.0</td>\n",
        "      <td>2.18</td>\n",
-       "      <td>2.13</td>\n",
-       "      <td>2.21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>305.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -228,8 +228,8 @@
        "      <td>2024-02-08 20:59:32+00:00</td>\n",
        "      <td>170.0</td>\n",
        "      <td>4.15</td>\n",
-       "      <td>4.05</td>\n",
-       "      <td>4.20</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>263.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -242,8 +242,8 @@
        "1  AMZN240308P00170000 2024-02-08 20:59:32+00:00   170.0           4.15   \n",
        "\n",
        "   put_bid  put_ask  put_volume  \n",
-       "0     2.13     2.21       305.0  \n",
-       "1     4.05     4.20       263.0  "
+       "0      0.0      0.0       305.0  \n",
+       "1      0.0      0.0       263.0  "
       ]
      },
      "metadata": {},
@@ -288,21 +288,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7.70</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>165.0</td>\n",
-       "      <td>2.13</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>169.84</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>2024-02-08 14:40:34.283070</td>\n",
+       "      <td>-4.84</td>\n",
+       "      <td>2024-02-08 21:48:12.766203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4.65</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>170.0</td>\n",
-       "      <td>4.05</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>169.84</td>\n",
-       "      <td>0.76</td>\n",
-       "      <td>2024-02-08 14:40:34.283070</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>2024-02-08 21:48:12.766203</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -310,8 +310,8 @@
       ],
       "text/plain": [
        "   $C_0$    $X$  $P_0$   $S_0$  Deviation              Download Time\n",
-       "0   7.70  165.0   2.13  169.84       0.73 2024-02-08 14:40:34.283070\n",
-       "1   4.65  170.0   4.05  169.84       0.76 2024-02-08 14:40:34.283070"
+       "0    0.0  165.0    0.0  169.84      -4.84 2024-02-08 21:48:12.766203\n",
+       "1    0.0  170.0    0.0  169.84       0.16 2024-02-08 21:48:12.766203"
       ]
      },
      "metadata": {},
@@ -327,8 +327,8 @@
       "\\hline\n",
       "contractSymbol & lastTradeDate & strike & lastPrice & bid & ask & volume \\\\\n",
       "\\hline\n",
-      "AMZN240308C00165000 & 2024-02-08 20:33:22 & 165.00 & 8.00 & 7.70 & 7.85 & 482.00 \\\\\n",
-      "AMZN240308C00170000 & 2024-02-08 20:54:58 & 170.00 & 4.70 & 4.65 & 4.80 & 247.00 \\\\\n",
+      "AMZN240308C00165000 & 2024-02-08 20:33:22 & 165.00 & 8.00 & 0.00 & 0.00 & 482.00 \\\\\n",
+      "AMZN240308C00170000 & 2024-02-08 20:54:58 & 170.00 & 4.70 & 0.00 & 0.00 & 247.00 \\\\\n",
       "\\hline\n",
       "\\end{tabular}\n",
       "\\end{table}\n",
@@ -339,8 +339,8 @@
       "\\hline\n",
       "contractSymbol & lastTradeDate & strike & lastPrice & bid & ask & volume \\\\\n",
       "\\hline\n",
-      "AMZN240308P00165000 & 2024-02-08 20:55:40 & 165.00 & 2.18 & 2.13 & 2.21 & 305.00 \\\\\n",
-      "AMZN240308P00170000 & 2024-02-08 20:59:32 & 170.00 & 4.15 & 4.05 & 4.20 & 263.00 \\\\\n",
+      "AMZN240308P00165000 & 2024-02-08 20:55:40 & 165.00 & 2.18 & 0.00 & 0.00 & 305.00 \\\\\n",
+      "AMZN240308P00170000 & 2024-02-08 20:59:32 & 170.00 & 4.15 & 0.00 & 0.00 & 263.00 \\\\\n",
       "\\hline\n",
       "\\end{tabular}\n",
       "\\end{table}\n",
@@ -351,8 +351,8 @@
       "\\hline\n",
       "$C_0$ & $X$ & $P_0$ & $S_0$ & Deviation & Download Time \\\\\n",
       "\\hline\n",
-      "7.70 & 165.00 & 2.13 & 169.84 & 0.73 & 2024-02-08 14:40:34.283070 \\\\\n",
-      "4.65 & 170.00 & 4.05 & 169.84 & 0.76 & 2024-02-08 14:40:34.283070 \\\\\n",
+      "0.00 & 165.00 & 0.00 & 169.84 & -4.84 & 2024-02-08 21:48:12.766203 \\\\\n",
+      "0.00 & 170.00 & 0.00 & 169.84 & 0.16 & 2024-02-08 21:48:12.766203 \\\\\n",
       "\\hline\n",
       "\\end{tabular}\n",
       "\\end{table}\n",
