Updated code slightly and ran it for stock LMT

--- a/ps2/PS2.ipynb
+++ b/ps2/PS2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,10 @@
     "    calls = opt.calls\n",
     "    puts = opt.puts\n",
     "\n",
+    "    # change time to \n",
+    "    calls['lastTradeDate'] = calls['lastTradeDate'].dt.tz_localize(None).dt.date\n",
+    "    puts['lastTradeDate'] = puts['lastTradeDate'].dt.tz_localize(None).dt.date\n",
+    "\n",
     "    calls = calls[['contractSymbol','lastTradeDate','strike', 'lastPrice', 'bid', 'ask', 'volume']].rename(columns={'strike': 'strike', 'lastPrice': 'call_lastPrice', 'bid': 'call_bid', 'ask': 'call_ask', 'volume': 'call_volume', 'lastTradeDate': 'call_lastTradeDate', 'contractSymbol': 'call_contractSymbol'})\n",
     "    puts = puts[['contractSymbol','lastTradeDate','strike', 'lastPrice', 'bid', 'ask', 'volume']].rename(columns={'strike': 'strike', 'lastPrice': 'put_lastPrice', 'bid': 'put_bid', 'ask': 'put_ask', 'volume': 'put_volume', 'lastTradeDate': 'put_lastTradeDate', 'contractSymbol': 'put_contractSymbol'})\n",
     "\n",
@@ -54,12 +58,14 @@
     "    relevant_merge = merge[(merge['strike'] == strike1) | (merge['strike'] == strike2)].reset_index(drop=True)\n",
     "    relevant_calls = calls[(calls['strike'] == strike1) | (calls['strike'] == strike2)].reset_index(drop=True)\n",
     "    relevant_puts = puts[(puts['strike'] == strike1) | (puts['strike'] == strike2)].reset_index(drop=True)\n",
-    "\n",
+    "    \n",
+    "    # add stock price\n",
     "    relevant_merge['stock_price'] = price\n",
     "\n",
     "    # calculate the put-call parity\n",
     "    relevant_merge['parity'] = relevant_merge['call_bid'] + relevant_merge['strike'] - (relevant_merge['put_bid'] + relevant_merge['stock_price'])\n",
     "\n",
+    "    # add dowload time\n",
     "    relevant_merge['dowload_time'] = now \n",
     "\n",
     "    # reorder the columns\n",
@@ -85,9 +91,9 @@
     "        latex_put = latex_put.replace('toprule', 'hline').replace('midrule', 'hline').replace('bottomrule', 'hline')\n",
     "        latex_merge = latex_merge.replace('toprule', 'hline').replace('midrule', 'hline').replace('bottomrule', 'hline')\n",
     "\n",
-    "        latex_call = latex_call.replace('call_','').replace('begin{table}', 'begin{table}[H]').replace('+00:00','')\n",
-    "        latex_put = latex_put.replace('put_','').replace('begin{table}', 'begin{table}[H]').replace('+00:00','')\n",
-    "        latex_merge = latex_merge.replace('begin{table}', 'begin{table}[H]')\n",
+    "        latex_call = latex_call.replace('call_','').replace('begin{table}', 'begin{table}[H]\\n\\centering').replace('+00:00','')\n",
+    "        latex_put = latex_put.replace('put_','').replace('begin{table}', 'begin{table}[H]\\n\\centering').replace('+00:00','')\n",
+    "        latex_merge = latex_merge.replace('begin{table}', 'begin{table}[H]\\n\\centering')\n",
     "\n",
     "        print(latex_call)\n",
     "        print(latex_put)\n",
@@ -96,263 +102,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Call Options for AMZN with expiration date 2024-03-08\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>call_contractSymbol</th>\n",
-       "      <th>call_lastTradeDate</th>\n",
-       "      <th>strike</th>\n",
-       "      <th>call_lastPrice</th>\n",
-       "      <th>call_bid</th>\n",
-       "      <th>call_ask</th>\n",
-       "      <th>call_volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AMZN240308C00165000</td>\n",
-       "      <td>2024-02-08 20:33:22+00:00</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>482.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AMZN240308C00170000</td>\n",
-       "      <td>2024-02-08 20:54:58+00:00</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>247.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   call_contractSymbol        call_lastTradeDate  strike  call_lastPrice  \\\n",
-       "0  AMZN240308C00165000 2024-02-08 20:33:22+00:00   165.0             8.0   \n",
-       "1  AMZN240308C00170000 2024-02-08 20:54:58+00:00   170.0             4.7   \n",
-       "\n",
-       "   call_bid  call_ask  call_volume  \n",
-       "0       0.0       0.0        482.0  \n",
-       "1       0.0       0.0        247.0  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Put Options for AMZN with expiration date 2024-03-08\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>put_contractSymbol</th>\n",
-       "      <th>put_lastTradeDate</th>\n",
-       "      <th>strike</th>\n",
-       "      <th>put_lastPrice</th>\n",
-       "      <th>put_bid</th>\n",
-       "      <th>put_ask</th>\n",
-       "      <th>put_volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AMZN240308P00165000</td>\n",
-       "      <td>2024-02-08 20:55:40+00:00</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>2.18</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>305.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AMZN240308P00170000</td>\n",
-       "      <td>2024-02-08 20:59:32+00:00</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>4.15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>263.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    put_contractSymbol         put_lastTradeDate  strike  put_lastPrice  \\\n",
-       "0  AMZN240308P00165000 2024-02-08 20:55:40+00:00   165.0           2.18   \n",
-       "1  AMZN240308P00170000 2024-02-08 20:59:32+00:00   170.0           4.15   \n",
-       "\n",
-       "   put_bid  put_ask  put_volume  \n",
-       "0      0.0      0.0       305.0  \n",
-       "1      0.0      0.0       263.0  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Put-Call Parity for AMZN with expiration date 2024-03-08\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>$C_0$</th>\n",
-       "      <th>$X$</th>\n",
-       "      <th>$P_0$</th>\n",
-       "      <th>$S_0$</th>\n",
-       "      <th>Deviation</th>\n",
-       "      <th>Download Time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>165.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>169.84</td>\n",
-       "      <td>-4.84</td>\n",
-       "      <td>2024-02-08 21:48:12.766203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>169.84</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>2024-02-08 21:48:12.766203</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   $C_0$    $X$  $P_0$   $S_0$  Deviation              Download Time\n",
-       "0    0.0  165.0    0.0  169.84      -4.84 2024-02-08 21:48:12.766203\n",
-       "1    0.0  170.0    0.0  169.84       0.16 2024-02-08 21:48:12.766203"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "\\begin{table}[H]\n",
-      "\\caption{Call Options for AMZN with expiration date 2024-03-08}\n",
+      "\\centering\n",
+      "\\caption{Call Options for LMT with expiration date 2024-03-08}\n",
       "\\begin{tabular}{llrrrrr}\n",
       "\\hline\n",
       "contractSymbol & lastTradeDate & strike & lastPrice & bid & ask & volume \\\\\n",
       "\\hline\n",
-      "AMZN240308C00165000 & 2024-02-08 20:33:22 & 165.00 & 8.00 & 0.00 & 0.00 & 482.00 \\\\\n",
-      "AMZN240308C00170000 & 2024-02-08 20:54:58 & 170.00 & 4.70 & 0.00 & 0.00 & 247.00 \\\\\n",
+      "LMT240308C00425000 & 2024-02-12 & 425.00 & 9.30 & 8.10 & 8.60 & 4.00 \\\\\n",
+      "LMT240308C00430000 & 2024-02-12 & 430.00 & 5.90 & 5.20 & 5.80 & 46.00 \\\\\n",
       "\\hline\n",
       "\\end{tabular}\n",
       "\\end{table}\n",
       "\n",
       "\\begin{table}[H]\n",
-      "\\caption{Put Options for AMZN with expiration date 2024-03-08}\n",
+      "\\centering\n",
+      "\\caption{Put Options for LMT with expiration date 2024-03-08}\n",
       "\\begin{tabular}{llrrrrr}\n",
       "\\hline\n",
       "contractSymbol & lastTradeDate & strike & lastPrice & bid & ask & volume \\\\\n",
       "\\hline\n",
-      "AMZN240308P00165000 & 2024-02-08 20:55:40 & 165.00 & 2.18 & 0.00 & 0.00 & 305.00 \\\\\n",
-      "AMZN240308P00170000 & 2024-02-08 20:59:32 & 170.00 & 4.15 & 0.00 & 0.00 & 263.00 \\\\\n",
+      "LMT240308P00425000 & 2024-02-12 & 425.00 & 5.60 & 5.30 & 6.10 & 5.00 \\\\\n",
+      "LMT240308P00430000 & 2024-02-09 & 430.00 & 9.90 & 8.00 & 8.50 & 2.00 \\\\\n",
       "\\hline\n",
       "\\end{tabular}\n",
       "\\end{table}\n",
       "\n",
       "\\begin{table}[H]\n",
-      "\\caption{Put-Call Parity for AMZN with expiration date 2024-03-08}\n",
+      "\\centering\n",
+      "\\caption{Put-Call Parity for LMT with expiration date 2024-03-08}\n",
       "\\begin{tabular}{rrrrrl}\n",
       "\\hline\n",
       "$C_0$ & $X$ & $P_0$ & $S_0$ & Deviation & Download Time \\\\\n",
       "\\hline\n",
-      "0.00 & 165.00 & 0.00 & 169.84 & -4.84 & 2024-02-08 21:48:12.766203 \\\\\n",
-      "0.00 & 170.00 & 0.00 & 169.84 & 0.16 & 2024-02-08 21:48:12.766203 \\\\\n",
+      "8.10 & 425.00 & 5.30 & 428.07 & -0.27 & 2024-02-12 19:40:41.254581 \\\\\n",
+      "5.20 & 430.00 & 8.00 & 428.07 & -0.87 & 2024-02-12 19:40:41.254581 \\\\\n",
       "\\hline\n",
       "\\end{tabular}\n",
       "\\end{table}\n",
@@ -361,7 +152,7 @@
     }
    ],
    "source": [
-    "options_arbitrage(ticker='AMZN', expiration_date='2024-03-08', print_tables=True, to_latex=True)"
+    "options_arbitrage(ticker='LMT', expiration_date='2024-03-08', print_tables=False, to_latex=True)"
    ]
   }
  ],
@@ -381,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
