Slight update of the code

--- a/ps6/PS6.ipynb
+++ b/ps6/PS6.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -45,296 +45,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-5.000000e-01</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>0.168829</td>\n",
-       "      <td>0.113423</td>\n",
-       "      <td>0.336784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-4.500000e-01</td>\n",
-       "      <td>1.45</td>\n",
-       "      <td>0.166999</td>\n",
-       "      <td>0.109261</td>\n",
-       "      <td>0.330547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-4.000000e-01</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>0.165168</td>\n",
-       "      <td>0.105228</td>\n",
-       "      <td>0.324389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-3.500000e-01</td>\n",
-       "      <td>1.35</td>\n",
-       "      <td>0.163338</td>\n",
-       "      <td>0.101325</td>\n",
-       "      <td>0.318315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-3.000000e-01</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>0.161507</td>\n",
-       "      <td>0.097551</td>\n",
-       "      <td>0.312331</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>-2.500000e-01</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>0.159677</td>\n",
-       "      <td>0.093906</td>\n",
-       "      <td>0.306441</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>-2.000000e-01</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>0.157847</td>\n",
-       "      <td>0.090391</td>\n",
-       "      <td>0.300651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>-1.500000e-01</td>\n",
-       "      <td>1.15</td>\n",
-       "      <td>0.156016</td>\n",
-       "      <td>0.087006</td>\n",
-       "      <td>0.294967</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>-1.000000e-01</td>\n",
-       "      <td>1.10</td>\n",
-       "      <td>0.154186</td>\n",
-       "      <td>0.083750</td>\n",
-       "      <td>0.289395</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>-5.000000e-02</td>\n",
-       "      <td>1.05</td>\n",
-       "      <td>0.152355</td>\n",
-       "      <td>0.080623</td>\n",
-       "      <td>0.283942</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>-6.938894e-17</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.150525</td>\n",
-       "      <td>0.077626</td>\n",
-       "      <td>0.278614</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>5.000000e-02</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>0.148694</td>\n",
-       "      <td>0.074758</td>\n",
-       "      <td>0.273419</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1.000000e-01</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.146864</td>\n",
-       "      <td>0.072020</td>\n",
-       "      <td>0.268365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1.500000e-01</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>0.145033</td>\n",
-       "      <td>0.069411</td>\n",
-       "      <td>0.263460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2.000000e-01</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.143203</td>\n",
-       "      <td>0.066932</td>\n",
-       "      <td>0.258711</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2.500000e-01</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.141372</td>\n",
-       "      <td>0.064582</td>\n",
-       "      <td>0.254129</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>3.000000e-01</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>0.139542</td>\n",
-       "      <td>0.062361</td>\n",
-       "      <td>0.249723</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>3.500000e-01</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>0.137711</td>\n",
-       "      <td>0.060270</td>\n",
-       "      <td>0.245500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>4.000000e-01</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>0.135881</td>\n",
-       "      <td>0.058309</td>\n",
-       "      <td>0.241473</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>4.500000e-01</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>0.134051</td>\n",
-       "      <td>0.056477</td>\n",
-       "      <td>0.237649</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>5.000000e-01</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.132220</td>\n",
-       "      <td>0.054774</td>\n",
-       "      <td>0.234039</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>5.500000e-01</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>0.130390</td>\n",
-       "      <td>0.053201</td>\n",
-       "      <td>0.230654</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>6.000000e-01</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>0.128559</td>\n",
-       "      <td>0.051758</td>\n",
-       "      <td>0.227503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>6.500000e-01</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>0.126729</td>\n",
-       "      <td>0.050444</td>\n",
-       "      <td>0.224597</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>7.000000e-01</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>0.124898</td>\n",
-       "      <td>0.049259</td>\n",
-       "      <td>0.221944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>7.500000e-01</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.123068</td>\n",
-       "      <td>0.048204</td>\n",
-       "      <td>0.219554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>8.000000e-01</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.121237</td>\n",
-       "      <td>0.047278</td>\n",
-       "      <td>0.217435</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>8.500000e-01</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>0.119407</td>\n",
-       "      <td>0.046482</td>\n",
-       "      <td>0.215596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>9.000000e-01</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.117576</td>\n",
-       "      <td>0.045815</td>\n",
-       "      <td>0.214044</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>9.500000e-01</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.115746</td>\n",
-       "      <td>0.045278</td>\n",
-       "      <td>0.212785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.113915</td>\n",
-       "      <td>0.044870</td>\n",
-       "      <td>0.211825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>1.050000e+00</td>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>0.112085</td>\n",
-       "      <td>0.044591</td>\n",
-       "      <td>0.211166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>1.100000e+00</td>\n",
-       "      <td>-0.10</td>\n",
-       "      <td>0.110254</td>\n",
-       "      <td>0.044442</td>\n",
-       "      <td>0.210813</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>1.150000e+00</td>\n",
-       "      <td>-0.15</td>\n",
-       "      <td>0.108424</td>\n",
-       "      <td>0.044423</td>\n",
-       "      <td>0.210767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>1.200000e+00</td>\n",
-       "      <td>-0.20</td>\n",
-       "      <td>0.106594</td>\n",
-       "      <td>0.044533</td>\n",
-       "      <td>0.211028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>1.250000e+00</td>\n",
-       "      <td>-0.25</td>\n",
-       "      <td>0.104763</td>\n",
-       "      <td>0.044772</td>\n",
-       "      <td>0.211594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>36</th>\n",
-       "      <td>1.300000e+00</td>\n",
+       "      <td>1.30</td>\n",
        "      <td>-0.30</td>\n",
        "      <td>0.102933</td>\n",
        "      <td>0.045141</td>\n",
@@ -342,7 +54,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
-       "      <td>1.350000e+00</td>\n",
+       "      <td>1.35</td>\n",
        "      <td>-0.35</td>\n",
        "      <td>0.101102</td>\n",
        "      <td>0.045639</td>\n",
@@ -350,7 +62,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
-       "      <td>1.400000e+00</td>\n",
+       "      <td>1.40</td>\n",
        "      <td>-0.40</td>\n",
        "      <td>0.099272</td>\n",
        "      <td>0.046267</td>\n",
@@ -358,7 +70,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
-       "      <td>1.450000e+00</td>\n",
+       "      <td>1.45</td>\n",
        "      <td>-0.45</td>\n",
        "      <td>0.097441</td>\n",
        "      <td>0.047025</td>\n",
@@ -366,7 +78,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40</th>\n",
-       "      <td>1.500000e+00</td>\n",
+       "      <td>1.50</td>\n",
        "      <td>-0.50</td>\n",
        "      <td>0.095611</td>\n",
        "      <td>0.047911</td>\n",
@@ -378,59 +90,23 @@
       ],
       "text/plain": [
        "    Weight in Growth  Weight in Value  Exp Return       Var   Std.Dev\n",
-       "0      -5.000000e-01             1.50    0.168829  0.113423  0.336784\n",
-       "1      -4.500000e-01             1.45    0.166999  0.109261  0.330547\n",
-       "2      -4.000000e-01             1.40    0.165168  0.105228  0.324389\n",
-       "3      -3.500000e-01             1.35    0.163338  0.101325  0.318315\n",
-       "4      -3.000000e-01             1.30    0.161507  0.097551  0.312331\n",
-       "5      -2.500000e-01             1.25    0.159677  0.093906  0.306441\n",
-       "6      -2.000000e-01             1.20    0.157847  0.090391  0.300651\n",
-       "7      -1.500000e-01             1.15    0.156016  0.087006  0.294967\n",
-       "8      -1.000000e-01             1.10    0.154186  0.083750  0.289395\n",
-       "9      -5.000000e-02             1.05    0.152355  0.080623  0.283942\n",
-       "10     -6.938894e-17             1.00    0.150525  0.077626  0.278614\n",
-       "11      5.000000e-02             0.95    0.148694  0.074758  0.273419\n",
-       "12      1.000000e-01             0.90    0.146864  0.072020  0.268365\n",
-       "13      1.500000e-01             0.85    0.145033  0.069411  0.263460\n",
-       "14      2.000000e-01             0.80    0.143203  0.066932  0.258711\n",
-       "15      2.500000e-01             0.75    0.141372  0.064582  0.254129\n",
-       "16      3.000000e-01             0.70    0.139542  0.062361  0.249723\n",
-       "17      3.500000e-01             0.65    0.137711  0.060270  0.245500\n",
-       "18      4.000000e-01             0.60    0.135881  0.058309  0.241473\n",
-       "19      4.500000e-01             0.55    0.134051  0.056477  0.237649\n",
-       "20      5.000000e-01             0.50    0.132220  0.054774  0.234039\n",
-       "21      5.500000e-01             0.45    0.130390  0.053201  0.230654\n",
-       "22      6.000000e-01             0.40    0.128559  0.051758  0.227503\n",
-       "23      6.500000e-01             0.35    0.126729  0.050444  0.224597\n",
-       "24      7.000000e-01             0.30    0.124898  0.049259  0.221944\n",
-       "25      7.500000e-01             0.25    0.123068  0.048204  0.219554\n",
-       "26      8.000000e-01             0.20    0.121237  0.047278  0.217435\n",
-       "27      8.500000e-01             0.15    0.119407  0.046482  0.215596\n",
-       "28      9.000000e-01             0.10    0.117576  0.045815  0.214044\n",
-       "29      9.500000e-01             0.05    0.115746  0.045278  0.212785\n",
-       "30      1.000000e+00             0.00    0.113915  0.044870  0.211825\n",
-       "31      1.050000e+00            -0.05    0.112085  0.044591  0.211166\n",
-       "32      1.100000e+00            -0.10    0.110254  0.044442  0.210813\n",
-       "33      1.150000e+00            -0.15    0.108424  0.044423  0.210767\n",
-       "34      1.200000e+00            -0.20    0.106594  0.044533  0.211028\n",
-       "35      1.250000e+00            -0.25    0.104763  0.044772  0.211594\n",
-       "36      1.300000e+00            -0.30    0.102933  0.045141  0.212464\n",
-       "37      1.350000e+00            -0.35    0.101102  0.045639  0.213634\n",
-       "38      1.400000e+00            -0.40    0.099272  0.046267  0.215098\n",
-       "39      1.450000e+00            -0.45    0.097441  0.047025  0.216852\n",
-       "40      1.500000e+00            -0.50    0.095611  0.047911  0.218887"
+       "36              1.30            -0.30    0.102933  0.045141  0.212464\n",
+       "37              1.35            -0.35    0.101102  0.045639  0.213634\n",
+       "38              1.40            -0.40    0.099272  0.046267  0.215098\n",
+       "39              1.45            -0.45    0.097441  0.047025  0.216852\n",
+       "40              1.50            -0.50    0.095611  0.047911  0.218887"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read in excel file\n",
-    "df = pd.read_excel('returns.xls', header=2)\n",
-    "df = df.iloc[:,8:13].dropna()\n",
-    "df"
+    "df_org = pd.read_excel('returns.xls', header=2)\n",
+    "df = df_org.iloc[:,8:].dropna()\n",
+    "df.tail()"
    ]
   },
   {
